<resources>
    <string name="app_name">Recycle iT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="btnAtras">Atras</string>
    <string name="imgperfil">imgPerfil</string>
    <string name="txtSaludo">Bienvenido:</string>
    <string name="txtTitulo">Perfil</string>
    <string name="txtNombre">Nombre:</string>
    <string name="txtEdad">Edad:</string>
    <string name="txtContacto">Numero Telefonico:</string>
    <string name="txtCorreo">Correo:</string>
    <string name="txtUbicacion">Ubicación:</string>
    <string name="item2Mapa">Mapa</string>
    <string name="todo">TODO</string>
    <string name="opciones">Opciones</string>
    <string name="mapa">Mapa</string>
    <string name="que_deseas_reciclar">¿Que deseas reciclar?</string>
    <string name="carton">Carton.</string>
    <string name="plasticos">Plasticos.</string>
    <string name="vidrio">Vidrio.</string>
    <string name="aceite">Aceite.</string>
    <string name="otros">Otros.</string>
    <string name="electr_nica">Electrónica.</string>
    <string name="atras">Atras</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="recolector">Recolector.</string>
    <string name="punto_m_s_cercano">Punto más cercano.</string>
    <string name="tituloPopup2">Forma de Reciclar.</string>
    <string name="parrafoPopUp2">Escoge una de las dos opciones, ir al punto de reciclaje o contactar con un recolector.</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="imagenPerfil">perfil</string>
    <string name="txtnumero">Numero de contacto: . . .</string>
    <string name="txtperfil">Perfil.</string>
    <string name="txtedad">Edad: . . .</string>
    <string name="txtnombre">Nombre: . . .</string>
    <string name="txtsaludo">Bienvenido . . .</string>
    <string name="txtubicacion">Ubicación: . . .</string>
    <string name="txtcorreo">Correo: . . .</string>
    <string name="imgagregar">imgAgregar</string>
    <string name="etxtnombre">Nombre Usuario:</string>
    <string name="etxtedad">Edad:</string>
    <string name="etxtnumerocontacto">Numero de contacto:</string>
    <string name="etxtcorreo">Correo:</string>
    <string name="etxtubicacion">Ubicación:</string>
    <string name="etxtpassword">Password:</string>
    <string name="btnAddUser">Enviar</string>
    <string name="solicitar_nuevo_punto">Solicitar nuevo punto</string>
    <string name="denunciar_punto">Denunciar punto</string>
    <string name="reciclaje_electr_nico">Reciclaje Electrónico.</string>
    <string name="rOrganico">Reciclaje Orgánico.</string>
    <string name="rVidrio">Reciclaje Vidrio.</string>
    <string name="rPlastico">Reciclaje Plastico.</string>
    <string name="rCarton">Reciclaje Cartón</string>
    <string name="etxtDireccion">Dirección.</string>
    <string name="etxtNombrePunto">Nombre del punto.</string>
    <string name="txtDenunciarPunto">Denuciar Punto</string>
    <string name="DejaTuMensaje">Deja tu mensaje.</string>
    <string name="txtcreacuenta">Crea una cuenta</string>
</resources>