<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/textView8"
        android:layout_width="243dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:text="Solicitud para ingresar un nuevo punto"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittxtNombrePunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/etxtNombrePunto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/etxtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/etxtDireccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edittxtNombrePunto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edittxtNombrePunto"
        app:layout_constraintTop_toBottomOf="@+id/edittxtNombrePunto" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="297dp"
        android:layout_height="382dp"
        app:layout_constraintEnd_toEndOf="@+id/etxtDireccion"
        app:layout_constraintStart_toStartOf="@+id/etxtDireccion"
        app:layout_constraintTop_toBottomOf="@+id/etxtDireccion">

        <CheckBox
            android:id="@+id/rbtnElectrico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reciclaje_electr_nico" />

        <CheckBox
            android:id="@+id/rbtnOrganico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rOrganico" />

        <CheckBox
            android:id="@+id/rbtnVidrio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rVidrio" />

        <CheckBox
            android:id="@+id/rbtnPlastico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rPlastico" />

        <CheckBox
            android:id="@+id/rbtnCarton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rCarton" />

        <CheckBox
            android:id="@+id/rbtnAceite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reciclaje Aceite" />

        <CheckBox
            android:id="@+id/rbtnOtros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Otros" />

        <EditText
            android:id="@+id/etxtOtroR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Otro Residuo."
            android:inputType="textPersonName" />

    </RadioGroup>

    <Button
        android:id="@+id/btnNewSoli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>