<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTituloDenuncia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtDenunciarPunto"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/etxtDireccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etxtdireccion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etxtdireccion"
        app:layout_constraintTop_toBottomOf="@+id/etxtdireccion" />

    <EditText
        android:id="@+id/etxtdireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/etxtNombrePunto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtTituloDenuncia"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/txtTituloDenuncia"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloDenuncia" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="217dp"
        android:layout_height="75dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/DejaTuMensaje"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/btnAceptarDenunciarPunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
</androidx.constraintlayout.widget.ConstraintLayout>