<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnReciclajeS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/btnSiguiente"
        app:backgroundTint="#2E7D32"
        app:layout_constraintEnd_toEndOf="@+id/checkBox6"
        app:layout_constraintStart_toEndOf="@+id/btnAtrasR"
        app:layout_constraintTop_toTopOf="@+id/btnAtrasR" />

    <TextView
        android:id="@+id/txtTituloPopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/que_deseas_reciclar"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAtrasR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/atras"
        app:backgroundTint="#0277BD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:button="@drawable/d_122068"
        app:layout_constraintStart_toStartOf="@+id/txtTituloPopUp"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloPopUp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:button="@drawable/ecoicon18_122084"
        app:layout_constraintStart_toStartOf="@+id/checkBox7"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:button="@drawable/ecoicon16_122083"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/ea_122070"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox7"
        app:layout_constraintEnd_toEndOf="@+id/txtTituloPopUp"
        app:layout_constraintTop_toTopOf="@+id/checkBox7"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/ecoicon1_122072"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox2"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        app:layout_constraintTop_toTopOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/ecoicon2_122074"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox3"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toTopOf="@+id/checkBox3" />

</androidx.constraintlayout.widget.ConstraintLayout>